force-app/main/default/objects/Knowledge__kav/fields/FAQs__c.field-meta.xml
<CustomField>
    <fullName>FAQs__c</fullName>
    <label>FAQs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>