force-app/main/default/objects/Knowledge__kav/fields/How_To__c.field-meta.xml
<CustomField>
    <fullName>How_To__c</fullName>
    <label>How-To</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>