force-app/main/default/objects/Knowledge__kav/fields/Policy_Content__c.field-meta.xml
<CustomField>
    <fullName>Policy_Content__c</fullName>
    <label>Policy Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>