force-app/main/default/objects/Knowledge__kav/recordTypes/FAQs.recordType-meta.xml
<RecordType>
    <fullName>FAQs</fullName>
    <active>true</active>
    <description>Frequently Asked Questions</description>
    <label>FAQs</label>
</RecordType>