force-app/main/default/objects/Knowledge__kav/recordTypes/Tutorial.recordType-meta.xml
<RecordType>
    <fullName>Tutorial</fullName>
    <active>true</active>
    <label>Tutorial</label>
</RecordType>